export const snapshot = {};

snapshot[`nu / linux / add 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/add?sysOsPlat=linux'#

def opPrint --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  \$"(\$args | flatten | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print --stderr
    return
  }
  \$"(ansi red)(\$args | flatten | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi green)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi yellow)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi blue)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  let args = \$args | flatten
  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opMaybePrintCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opPrintCmd ...\$args
  }
}

def opRunCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ')"
}

def opRunSilentCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ') o+e> | silent"
}

def opMaybeRunCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunCmd ...\$args
  }
}

def opMaybeRunSilentCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunSilentCmd ...\$args
  }
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opMaybeRunCmd ...\$args
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 114

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.NU_VERS_MAJOR = 0

\$env.NU_VERS_MINOR = 114

\$env.NU_VERS_PATCH = 1

\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/virt/add'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux'#

def wutNuVersCurrent [nu_bin: string, nu_vers: string] {
  if not (\$nu_bin | path exists) {
    return false
  }
  let installed = (do { ^\$nu_bin --version } | complete)
  if \$installed.exit_code != 0 {
    return false
  }
  (\$installed.stdout | str trim) == \$nu_vers
}

def wutNuLockRelease [lock_path: string] {
  rm --force \$lock_path
  # best-effort: only succeeds if now empty, so a concurrent process's own in-flight files are never touched
  try { rm (\$lock_path | path dirname) } catch { }
}

def wutNuInstall [wut_home: string, nu_bin: string, nu_vers: string, ext: string] {
  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    return
  }

  let triple = match \$"(\$env.SYS_OS_PLAT)_(\$env.SYS_CPU_ARCH)" {
    'darwin_aarch64' => 'aarch64-apple-darwin',
    'darwin_x86_64' => 'x86_64-apple-darwin',
    'linux_aarch64' => 'aarch64-unknown-linux-gnu',
    'linux_x86_64' => 'x86_64-unknown-linux-gnu',
    'winnt_aarch64' => 'aarch64-pc-windows-msvc',
    'winnt_x86_64' => 'x86_64-pc-windows-msvc',
    _ => '',
  }
  if \$triple == '' {
    opPrintErr \$"unsupported platform/arch for nu sync: (\$env.SYS_OS_PLAT)/(\$env.SYS_CPU_ARCH)"
    exit 1
  }

  # a hidden dir nested inside bin (not bin itself) so a fresh download can never collide with the pinned nu_bin path
  let work_dir = (\$wut_home | path join 'bin' '.nu')
  mkdir \$work_dir

  let lock_path = (\$work_dir | path join 'nu.lock')
  mut acquired = false
  mut waited = 0
  while \$waited < 240 {
    if (wutNuVersCurrent \$nu_bin \$nu_vers) {
      return
    }
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if \$locked {
      \$acquired = true
      break
    }
    sleep 500ms
    \$waited = \$waited + 1
  }
  if not \$acquired {
    opPrintWarn \$"reclaiming stale nu sync lock: (\$lock_path)"
    rm --force \$lock_path
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if not \$locked {
      opPrintErr \$"failed to acquire nu sync lock: (\$lock_path)"
      exit 1
    }
  }

  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    wutNuLockRelease \$lock_path
    return
  }

  let ext_archive = if \$env.SYS_OS_PLAT == 'winnt' { 'zip' } else { 'tar.gz' }
  let asset = \$"nu-(\$nu_vers)-(\$triple).(\$ext_archive)"
  let url = \$"https://github.com/nushell/nushell/releases/download/(\$nu_vers)/(\$asset)"
  let archive_path = (\$work_dir | path join \$asset)
  let extract_dir = (\$work_dir | path join \$"nu-(\$nu_vers)-(\$triple)")

  rm --force --recursive \$archive_path \$extract_dir

  if (do { ^curl --fail-with-body --location --no-progress-meter --output \$archive_path --url \$url } | complete).exit_code != 0 {
    opPrintErr \$"failed to download nu (\$nu_vers): (\$url)"
    rm --force \$archive_path
    wutNuLockRelease \$lock_path
    exit 1
  }

  # zip assets (winnt) have no wrapping folder, unlike tar.gz assets, so they must extract directly into
  # extract_dir; tar.gz assets already contain their own nu-(\$nu_vers)-(\$triple) folder, so they extract into work_dir
  let extract_target = if \$ext_archive == 'zip' {
    mkdir \$extract_dir
    \$extract_dir
  } else {
    \$work_dir
  }
  if (do { ^tar -xf \$archive_path -C \$extract_target } | complete).exit_code != 0 {
    opPrintErr \$"failed to extract nu (\$nu_vers)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  let extracted_bin = (\$extract_dir | path join \$"nu(\$ext)")
  if not (\$extracted_bin | path exists) {
    opPrintErr \$"nu binary not found in extracted archive: (\$extract_dir)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  if \$env.SYS_OS_PLAT != 'winnt' {
    ^chmod +x \$extracted_bin
  }
  mv --force \$extracted_bin \$nu_bin
  rm --force --recursive \$archive_path \$extract_dir

  wutNuLockRelease \$lock_path
}

def --env wutNuSync [] {
  if \$env.SYS_OS_PLAT not-in ['darwin' 'linux' 'winnt'] {
    opPrintWarn 'script is for darwin, linux, or winnt'
    return
  }

  \$env.WUT_HOME = (\$env.WUT_HOME? | default (\$env.HOME | path join '.wut'))
  let wut_home = \$env.WUT_HOME
  let ext = if \$env.SYS_OS_PLAT == 'winnt' { '.exe' } else { '' }
  let nu_bin = (\$wut_home | path join 'bin' \$"nu(\$ext)")
  let nu_vers = \$"(\$env.NU_VERS_MAJOR).(\$env.NU_VERS_MINOR).(\$env.NU_VERS_PATCH)"

  wutNuInstall \$wut_home \$nu_bin \$nu_vers \$ext
}

wutNuSync


opPrintInfo r#'id: wut virt add | add on local
aliases: 'a, ad, in, install'
arguments:
  - <parts> | path part(s) to match'#
\`
`;

snapshot[`nu / linux / find 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/find?sysOsPlat=linux&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / linux / list 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/list?sysOsPlat=linux&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / linux / rem 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/rem?sysOsPlat=linux'#

def opPrint --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  \$"(\$args | flatten | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print --stderr
    return
  }
  \$"(ansi red)(\$args | flatten | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi green)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi yellow)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi blue)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  let args = \$args | flatten
  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opMaybePrintCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opPrintCmd ...\$args
  }
}

def opRunCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ')"
}

def opRunSilentCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ') o+e> | silent"
}

def opMaybeRunCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunCmd ...\$args
  }
}

def opMaybeRunSilentCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunSilentCmd ...\$args
  }
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opMaybeRunCmd ...\$args
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 114

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.NU_VERS_MAJOR = 0

\$env.NU_VERS_MINOR = 114

\$env.NU_VERS_PATCH = 1

\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/virt/rem'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux'#

def wutNuVersCurrent [nu_bin: string, nu_vers: string] {
  if not (\$nu_bin | path exists) {
    return false
  }
  let installed = (do { ^\$nu_bin --version } | complete)
  if \$installed.exit_code != 0 {
    return false
  }
  (\$installed.stdout | str trim) == \$nu_vers
}

def wutNuLockRelease [lock_path: string] {
  rm --force \$lock_path
  # best-effort: only succeeds if now empty, so a concurrent process's own in-flight files are never touched
  try { rm (\$lock_path | path dirname) } catch { }
}

def wutNuInstall [wut_home: string, nu_bin: string, nu_vers: string, ext: string] {
  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    return
  }

  let triple = match \$"(\$env.SYS_OS_PLAT)_(\$env.SYS_CPU_ARCH)" {
    'darwin_aarch64' => 'aarch64-apple-darwin',
    'darwin_x86_64' => 'x86_64-apple-darwin',
    'linux_aarch64' => 'aarch64-unknown-linux-gnu',
    'linux_x86_64' => 'x86_64-unknown-linux-gnu',
    'winnt_aarch64' => 'aarch64-pc-windows-msvc',
    'winnt_x86_64' => 'x86_64-pc-windows-msvc',
    _ => '',
  }
  if \$triple == '' {
    opPrintErr \$"unsupported platform/arch for nu sync: (\$env.SYS_OS_PLAT)/(\$env.SYS_CPU_ARCH)"
    exit 1
  }

  # a hidden dir nested inside bin (not bin itself) so a fresh download can never collide with the pinned nu_bin path
  let work_dir = (\$wut_home | path join 'bin' '.nu')
  mkdir \$work_dir

  let lock_path = (\$work_dir | path join 'nu.lock')
  mut acquired = false
  mut waited = 0
  while \$waited < 240 {
    if (wutNuVersCurrent \$nu_bin \$nu_vers) {
      return
    }
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if \$locked {
      \$acquired = true
      break
    }
    sleep 500ms
    \$waited = \$waited + 1
  }
  if not \$acquired {
    opPrintWarn \$"reclaiming stale nu sync lock: (\$lock_path)"
    rm --force \$lock_path
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if not \$locked {
      opPrintErr \$"failed to acquire nu sync lock: (\$lock_path)"
      exit 1
    }
  }

  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    wutNuLockRelease \$lock_path
    return
  }

  let ext_archive = if \$env.SYS_OS_PLAT == 'winnt' { 'zip' } else { 'tar.gz' }
  let asset = \$"nu-(\$nu_vers)-(\$triple).(\$ext_archive)"
  let url = \$"https://github.com/nushell/nushell/releases/download/(\$nu_vers)/(\$asset)"
  let archive_path = (\$work_dir | path join \$asset)
  let extract_dir = (\$work_dir | path join \$"nu-(\$nu_vers)-(\$triple)")

  rm --force --recursive \$archive_path \$extract_dir

  if (do { ^curl --fail-with-body --location --no-progress-meter --output \$archive_path --url \$url } | complete).exit_code != 0 {
    opPrintErr \$"failed to download nu (\$nu_vers): (\$url)"
    rm --force \$archive_path
    wutNuLockRelease \$lock_path
    exit 1
  }

  # zip assets (winnt) have no wrapping folder, unlike tar.gz assets, so they must extract directly into
  # extract_dir; tar.gz assets already contain their own nu-(\$nu_vers)-(\$triple) folder, so they extract into work_dir
  let extract_target = if \$ext_archive == 'zip' {
    mkdir \$extract_dir
    \$extract_dir
  } else {
    \$work_dir
  }
  if (do { ^tar -xf \$archive_path -C \$extract_target } | complete).exit_code != 0 {
    opPrintErr \$"failed to extract nu (\$nu_vers)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  let extracted_bin = (\$extract_dir | path join \$"nu(\$ext)")
  if not (\$extracted_bin | path exists) {
    opPrintErr \$"nu binary not found in extracted archive: (\$extract_dir)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  if \$env.SYS_OS_PLAT != 'winnt' {
    ^chmod +x \$extracted_bin
  }
  mv --force \$extracted_bin \$nu_bin
  rm --force --recursive \$archive_path \$extract_dir

  wutNuLockRelease \$lock_path
}

def --env wutNuSync [] {
  if \$env.SYS_OS_PLAT not-in ['darwin' 'linux' 'winnt'] {
    opPrintWarn 'script is for darwin, linux, or winnt'
    return
  }

  \$env.WUT_HOME = (\$env.WUT_HOME? | default (\$env.HOME | path join '.wut'))
  let wut_home = \$env.WUT_HOME
  let ext = if \$env.SYS_OS_PLAT == 'winnt' { '.exe' } else { '' }
  let nu_bin = (\$wut_home | path join 'bin' \$"nu(\$ext)")
  let nu_vers = \$"(\$env.NU_VERS_MAJOR).(\$env.NU_VERS_MINOR).(\$env.NU_VERS_PATCH)"

  wutNuInstall \$wut_home \$nu_bin \$nu_vers \$ext
}

wutNuSync


opPrintInfo r#'id: wut virt rem | remove on local
aliases: 'r, rm, rem, remove, un, unin, uninstall'
arguments:
  - <parts> | path part(s) to match'#
\`
`;

snapshot[`nu / linux / sync 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/sync?sysOsPlat=linux&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / linux / tidy 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/tidy?sysOsPlat=linux&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / darwin / add 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/add?sysOsPlat=darwin'#

def opPrint --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  \$"(\$args | flatten | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print --stderr
    return
  }
  \$"(ansi red)(\$args | flatten | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi green)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi yellow)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi blue)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  let args = \$args | flatten
  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opMaybePrintCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opPrintCmd ...\$args
  }
}

def opRunCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ')"
}

def opRunSilentCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ') o+e> | silent"
}

def opMaybeRunCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunCmd ...\$args
  }
}

def opMaybeRunSilentCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunSilentCmd ...\$args
  }
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opMaybeRunCmd ...\$args
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 114

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.NU_VERS_MAJOR = 0

\$env.NU_VERS_MINOR = 114

\$env.NU_VERS_PATCH = 1

\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'darwin'#

\$env.REQ_PATH = r#'/sh/nu/virt/add'#

\$env.REQ_SRCH = r#'?sysOsPlat=darwin'#

def wutNuVersCurrent [nu_bin: string, nu_vers: string] {
  if not (\$nu_bin | path exists) {
    return false
  }
  let installed = (do { ^\$nu_bin --version } | complete)
  if \$installed.exit_code != 0 {
    return false
  }
  (\$installed.stdout | str trim) == \$nu_vers
}

def wutNuLockRelease [lock_path: string] {
  rm --force \$lock_path
  # best-effort: only succeeds if now empty, so a concurrent process's own in-flight files are never touched
  try { rm (\$lock_path | path dirname) } catch { }
}

def wutNuInstall [wut_home: string, nu_bin: string, nu_vers: string, ext: string] {
  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    return
  }

  let triple = match \$"(\$env.SYS_OS_PLAT)_(\$env.SYS_CPU_ARCH)" {
    'darwin_aarch64' => 'aarch64-apple-darwin',
    'darwin_x86_64' => 'x86_64-apple-darwin',
    'linux_aarch64' => 'aarch64-unknown-linux-gnu',
    'linux_x86_64' => 'x86_64-unknown-linux-gnu',
    'winnt_aarch64' => 'aarch64-pc-windows-msvc',
    'winnt_x86_64' => 'x86_64-pc-windows-msvc',
    _ => '',
  }
  if \$triple == '' {
    opPrintErr \$"unsupported platform/arch for nu sync: (\$env.SYS_OS_PLAT)/(\$env.SYS_CPU_ARCH)"
    exit 1
  }

  # a hidden dir nested inside bin (not bin itself) so a fresh download can never collide with the pinned nu_bin path
  let work_dir = (\$wut_home | path join 'bin' '.nu')
  mkdir \$work_dir

  let lock_path = (\$work_dir | path join 'nu.lock')
  mut acquired = false
  mut waited = 0
  while \$waited < 240 {
    if (wutNuVersCurrent \$nu_bin \$nu_vers) {
      return
    }
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if \$locked {
      \$acquired = true
      break
    }
    sleep 500ms
    \$waited = \$waited + 1
  }
  if not \$acquired {
    opPrintWarn \$"reclaiming stale nu sync lock: (\$lock_path)"
    rm --force \$lock_path
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if not \$locked {
      opPrintErr \$"failed to acquire nu sync lock: (\$lock_path)"
      exit 1
    }
  }

  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    wutNuLockRelease \$lock_path
    return
  }

  let ext_archive = if \$env.SYS_OS_PLAT == 'winnt' { 'zip' } else { 'tar.gz' }
  let asset = \$"nu-(\$nu_vers)-(\$triple).(\$ext_archive)"
  let url = \$"https://github.com/nushell/nushell/releases/download/(\$nu_vers)/(\$asset)"
  let archive_path = (\$work_dir | path join \$asset)
  let extract_dir = (\$work_dir | path join \$"nu-(\$nu_vers)-(\$triple)")

  rm --force --recursive \$archive_path \$extract_dir

  if (do { ^curl --fail-with-body --location --no-progress-meter --output \$archive_path --url \$url } | complete).exit_code != 0 {
    opPrintErr \$"failed to download nu (\$nu_vers): (\$url)"
    rm --force \$archive_path
    wutNuLockRelease \$lock_path
    exit 1
  }

  # zip assets (winnt) have no wrapping folder, unlike tar.gz assets, so they must extract directly into
  # extract_dir; tar.gz assets already contain their own nu-(\$nu_vers)-(\$triple) folder, so they extract into work_dir
  let extract_target = if \$ext_archive == 'zip' {
    mkdir \$extract_dir
    \$extract_dir
  } else {
    \$work_dir
  }
  if (do { ^tar -xf \$archive_path -C \$extract_target } | complete).exit_code != 0 {
    opPrintErr \$"failed to extract nu (\$nu_vers)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  let extracted_bin = (\$extract_dir | path join \$"nu(\$ext)")
  if not (\$extracted_bin | path exists) {
    opPrintErr \$"nu binary not found in extracted archive: (\$extract_dir)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  if \$env.SYS_OS_PLAT != 'winnt' {
    ^chmod +x \$extracted_bin
  }
  mv --force \$extracted_bin \$nu_bin
  rm --force --recursive \$archive_path \$extract_dir

  wutNuLockRelease \$lock_path
}

def --env wutNuSync [] {
  if \$env.SYS_OS_PLAT not-in ['darwin' 'linux' 'winnt'] {
    opPrintWarn 'script is for darwin, linux, or winnt'
    return
  }

  \$env.WUT_HOME = (\$env.WUT_HOME? | default (\$env.HOME | path join '.wut'))
  let wut_home = \$env.WUT_HOME
  let ext = if \$env.SYS_OS_PLAT == 'winnt' { '.exe' } else { '' }
  let nu_bin = (\$wut_home | path join 'bin' \$"nu(\$ext)")
  let nu_vers = \$"(\$env.NU_VERS_MAJOR).(\$env.NU_VERS_MINOR).(\$env.NU_VERS_PATCH)"

  wutNuInstall \$wut_home \$nu_bin \$nu_vers \$ext
}

wutNuSync


opPrintInfo r#'id: wut virt add | add on local
aliases: 'a, ad, in, install'
arguments:
  - <parts> | path part(s) to match'#
\`
`;

snapshot[`nu / darwin / find 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/find?sysOsPlat=darwin&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / darwin / list 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/list?sysOsPlat=darwin&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / darwin / rem 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/rem?sysOsPlat=darwin'#

def opPrint --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  \$"(\$args | flatten | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print --stderr
    return
  }
  \$"(ansi red)(\$args | flatten | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi green)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi yellow)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi blue)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  let args = \$args | flatten
  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opMaybePrintCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opPrintCmd ...\$args
  }
}

def opRunCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ')"
}

def opRunSilentCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ') o+e> | silent"
}

def opMaybeRunCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunCmd ...\$args
  }
}

def opMaybeRunSilentCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunSilentCmd ...\$args
  }
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opMaybeRunCmd ...\$args
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 114

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.NU_VERS_MAJOR = 0

\$env.NU_VERS_MINOR = 114

\$env.NU_VERS_PATCH = 1

\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'darwin'#

\$env.REQ_PATH = r#'/sh/nu/virt/rem'#

\$env.REQ_SRCH = r#'?sysOsPlat=darwin'#

def wutNuVersCurrent [nu_bin: string, nu_vers: string] {
  if not (\$nu_bin | path exists) {
    return false
  }
  let installed = (do { ^\$nu_bin --version } | complete)
  if \$installed.exit_code != 0 {
    return false
  }
  (\$installed.stdout | str trim) == \$nu_vers
}

def wutNuLockRelease [lock_path: string] {
  rm --force \$lock_path
  # best-effort: only succeeds if now empty, so a concurrent process's own in-flight files are never touched
  try { rm (\$lock_path | path dirname) } catch { }
}

def wutNuInstall [wut_home: string, nu_bin: string, nu_vers: string, ext: string] {
  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    return
  }

  let triple = match \$"(\$env.SYS_OS_PLAT)_(\$env.SYS_CPU_ARCH)" {
    'darwin_aarch64' => 'aarch64-apple-darwin',
    'darwin_x86_64' => 'x86_64-apple-darwin',
    'linux_aarch64' => 'aarch64-unknown-linux-gnu',
    'linux_x86_64' => 'x86_64-unknown-linux-gnu',
    'winnt_aarch64' => 'aarch64-pc-windows-msvc',
    'winnt_x86_64' => 'x86_64-pc-windows-msvc',
    _ => '',
  }
  if \$triple == '' {
    opPrintErr \$"unsupported platform/arch for nu sync: (\$env.SYS_OS_PLAT)/(\$env.SYS_CPU_ARCH)"
    exit 1
  }

  # a hidden dir nested inside bin (not bin itself) so a fresh download can never collide with the pinned nu_bin path
  let work_dir = (\$wut_home | path join 'bin' '.nu')
  mkdir \$work_dir

  let lock_path = (\$work_dir | path join 'nu.lock')
  mut acquired = false
  mut waited = 0
  while \$waited < 240 {
    if (wutNuVersCurrent \$nu_bin \$nu_vers) {
      return
    }
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if \$locked {
      \$acquired = true
      break
    }
    sleep 500ms
    \$waited = \$waited + 1
  }
  if not \$acquired {
    opPrintWarn \$"reclaiming stale nu sync lock: (\$lock_path)"
    rm --force \$lock_path
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if not \$locked {
      opPrintErr \$"failed to acquire nu sync lock: (\$lock_path)"
      exit 1
    }
  }

  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    wutNuLockRelease \$lock_path
    return
  }

  let ext_archive = if \$env.SYS_OS_PLAT == 'winnt' { 'zip' } else { 'tar.gz' }
  let asset = \$"nu-(\$nu_vers)-(\$triple).(\$ext_archive)"
  let url = \$"https://github.com/nushell/nushell/releases/download/(\$nu_vers)/(\$asset)"
  let archive_path = (\$work_dir | path join \$asset)
  let extract_dir = (\$work_dir | path join \$"nu-(\$nu_vers)-(\$triple)")

  rm --force --recursive \$archive_path \$extract_dir

  if (do { ^curl --fail-with-body --location --no-progress-meter --output \$archive_path --url \$url } | complete).exit_code != 0 {
    opPrintErr \$"failed to download nu (\$nu_vers): (\$url)"
    rm --force \$archive_path
    wutNuLockRelease \$lock_path
    exit 1
  }

  # zip assets (winnt) have no wrapping folder, unlike tar.gz assets, so they must extract directly into
  # extract_dir; tar.gz assets already contain their own nu-(\$nu_vers)-(\$triple) folder, so they extract into work_dir
  let extract_target = if \$ext_archive == 'zip' {
    mkdir \$extract_dir
    \$extract_dir
  } else {
    \$work_dir
  }
  if (do { ^tar -xf \$archive_path -C \$extract_target } | complete).exit_code != 0 {
    opPrintErr \$"failed to extract nu (\$nu_vers)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  let extracted_bin = (\$extract_dir | path join \$"nu(\$ext)")
  if not (\$extracted_bin | path exists) {
    opPrintErr \$"nu binary not found in extracted archive: (\$extract_dir)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  if \$env.SYS_OS_PLAT != 'winnt' {
    ^chmod +x \$extracted_bin
  }
  mv --force \$extracted_bin \$nu_bin
  rm --force --recursive \$archive_path \$extract_dir

  wutNuLockRelease \$lock_path
}

def --env wutNuSync [] {
  if \$env.SYS_OS_PLAT not-in ['darwin' 'linux' 'winnt'] {
    opPrintWarn 'script is for darwin, linux, or winnt'
    return
  }

  \$env.WUT_HOME = (\$env.WUT_HOME? | default (\$env.HOME | path join '.wut'))
  let wut_home = \$env.WUT_HOME
  let ext = if \$env.SYS_OS_PLAT == 'winnt' { '.exe' } else { '' }
  let nu_bin = (\$wut_home | path join 'bin' \$"nu(\$ext)")
  let nu_vers = \$"(\$env.NU_VERS_MAJOR).(\$env.NU_VERS_MINOR).(\$env.NU_VERS_PATCH)"

  wutNuInstall \$wut_home \$nu_bin \$nu_vers \$ext
}

wutNuSync


opPrintInfo r#'id: wut virt rem | remove on local
aliases: 'r, rm, rem, remove, un, unin, uninstall'
arguments:
  - <parts> | path part(s) to match'#
\`
`;

snapshot[`nu / darwin / sync 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/sync?sysOsPlat=darwin&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / darwin / tidy 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/tidy?sysOsPlat=darwin&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / winnt / add 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/add?sysOsPlat=winnt'#

def opPrint --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  \$"(\$args | flatten | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print --stderr
    return
  }
  \$"(ansi red)(\$args | flatten | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi green)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi yellow)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi blue)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  let args = \$args | flatten
  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opMaybePrintCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opPrintCmd ...\$args
  }
}

def opRunCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ')"
}

def opRunSilentCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ') o+e> | silent"
}

def opMaybeRunCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunCmd ...\$args
  }
}

def opMaybeRunSilentCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunSilentCmd ...\$args
  }
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opMaybeRunCmd ...\$args
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 114

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.NU_VERS_MAJOR = 0

\$env.NU_VERS_MINOR = 114

\$env.NU_VERS_PATCH = 1

\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'winnt'#

\$env.REQ_PATH = r#'/sh/nu/virt/add'#

\$env.REQ_SRCH = r#'?sysOsPlat=winnt'#

def wutNuVersCurrent [nu_bin: string, nu_vers: string] {
  if not (\$nu_bin | path exists) {
    return false
  }
  let installed = (do { ^\$nu_bin --version } | complete)
  if \$installed.exit_code != 0 {
    return false
  }
  (\$installed.stdout | str trim) == \$nu_vers
}

def wutNuLockRelease [lock_path: string] {
  rm --force \$lock_path
  # best-effort: only succeeds if now empty, so a concurrent process's own in-flight files are never touched
  try { rm (\$lock_path | path dirname) } catch { }
}

def wutNuInstall [wut_home: string, nu_bin: string, nu_vers: string, ext: string] {
  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    return
  }

  let triple = match \$"(\$env.SYS_OS_PLAT)_(\$env.SYS_CPU_ARCH)" {
    'darwin_aarch64' => 'aarch64-apple-darwin',
    'darwin_x86_64' => 'x86_64-apple-darwin',
    'linux_aarch64' => 'aarch64-unknown-linux-gnu',
    'linux_x86_64' => 'x86_64-unknown-linux-gnu',
    'winnt_aarch64' => 'aarch64-pc-windows-msvc',
    'winnt_x86_64' => 'x86_64-pc-windows-msvc',
    _ => '',
  }
  if \$triple == '' {
    opPrintErr \$"unsupported platform/arch for nu sync: (\$env.SYS_OS_PLAT)/(\$env.SYS_CPU_ARCH)"
    exit 1
  }

  # a hidden dir nested inside bin (not bin itself) so a fresh download can never collide with the pinned nu_bin path
  let work_dir = (\$wut_home | path join 'bin' '.nu')
  mkdir \$work_dir

  let lock_path = (\$work_dir | path join 'nu.lock')
  mut acquired = false
  mut waited = 0
  while \$waited < 240 {
    if (wutNuVersCurrent \$nu_bin \$nu_vers) {
      return
    }
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if \$locked {
      \$acquired = true
      break
    }
    sleep 500ms
    \$waited = \$waited + 1
  }
  if not \$acquired {
    opPrintWarn \$"reclaiming stale nu sync lock: (\$lock_path)"
    rm --force \$lock_path
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if not \$locked {
      opPrintErr \$"failed to acquire nu sync lock: (\$lock_path)"
      exit 1
    }
  }

  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    wutNuLockRelease \$lock_path
    return
  }

  let ext_archive = if \$env.SYS_OS_PLAT == 'winnt' { 'zip' } else { 'tar.gz' }
  let asset = \$"nu-(\$nu_vers)-(\$triple).(\$ext_archive)"
  let url = \$"https://github.com/nushell/nushell/releases/download/(\$nu_vers)/(\$asset)"
  let archive_path = (\$work_dir | path join \$asset)
  let extract_dir = (\$work_dir | path join \$"nu-(\$nu_vers)-(\$triple)")

  rm --force --recursive \$archive_path \$extract_dir

  if (do { ^curl --fail-with-body --location --no-progress-meter --output \$archive_path --url \$url } | complete).exit_code != 0 {
    opPrintErr \$"failed to download nu (\$nu_vers): (\$url)"
    rm --force \$archive_path
    wutNuLockRelease \$lock_path
    exit 1
  }

  # zip assets (winnt) have no wrapping folder, unlike tar.gz assets, so they must extract directly into
  # extract_dir; tar.gz assets already contain their own nu-(\$nu_vers)-(\$triple) folder, so they extract into work_dir
  let extract_target = if \$ext_archive == 'zip' {
    mkdir \$extract_dir
    \$extract_dir
  } else {
    \$work_dir
  }
  if (do { ^tar -xf \$archive_path -C \$extract_target } | complete).exit_code != 0 {
    opPrintErr \$"failed to extract nu (\$nu_vers)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  let extracted_bin = (\$extract_dir | path join \$"nu(\$ext)")
  if not (\$extracted_bin | path exists) {
    opPrintErr \$"nu binary not found in extracted archive: (\$extract_dir)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  if \$env.SYS_OS_PLAT != 'winnt' {
    ^chmod +x \$extracted_bin
  }
  mv --force \$extracted_bin \$nu_bin
  rm --force --recursive \$archive_path \$extract_dir

  wutNuLockRelease \$lock_path
}

def --env wutNuSync [] {
  if \$env.SYS_OS_PLAT not-in ['darwin' 'linux' 'winnt'] {
    opPrintWarn 'script is for darwin, linux, or winnt'
    return
  }

  \$env.WUT_HOME = (\$env.WUT_HOME? | default (\$env.HOME | path join '.wut'))
  let wut_home = \$env.WUT_HOME
  let ext = if \$env.SYS_OS_PLAT == 'winnt' { '.exe' } else { '' }
  let nu_bin = (\$wut_home | path join 'bin' \$"nu(\$ext)")
  let nu_vers = \$"(\$env.NU_VERS_MAJOR).(\$env.NU_VERS_MINOR).(\$env.NU_VERS_PATCH)"

  wutNuInstall \$wut_home \$nu_bin \$nu_vers \$ext
}

wutNuSync


opPrintInfo r#'id: wut virt add | add on local
aliases: 'a, ad, in, install'
arguments:
  - <parts> | path part(s) to match'#
\`
`;

snapshot[`nu / winnt / find 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu.exe') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/find?sysOsPlat=winnt&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / winnt / list 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu.exe') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/list?sysOsPlat=winnt&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / winnt / rem 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/rem?sysOsPlat=winnt'#

def opPrint --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  \$"(\$args | flatten | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print --stderr
    return
  }
  \$"(ansi red)(\$args | flatten | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi green)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi yellow)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi blue)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  let args = \$args | flatten
  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opMaybePrintCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opPrintCmd ...\$args
  }
}

def opRunCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ')"
}

def opRunSilentCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ') o+e> | silent"
}

def opMaybeRunCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunCmd ...\$args
  }
}

def opMaybeRunSilentCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunSilentCmd ...\$args
  }
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opMaybeRunCmd ...\$args
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 114

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.NU_VERS_MAJOR = 0

\$env.NU_VERS_MINOR = 114

\$env.NU_VERS_PATCH = 1

\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'winnt'#

\$env.REQ_PATH = r#'/sh/nu/virt/rem'#

\$env.REQ_SRCH = r#'?sysOsPlat=winnt'#

def wutNuVersCurrent [nu_bin: string, nu_vers: string] {
  if not (\$nu_bin | path exists) {
    return false
  }
  let installed = (do { ^\$nu_bin --version } | complete)
  if \$installed.exit_code != 0 {
    return false
  }
  (\$installed.stdout | str trim) == \$nu_vers
}

def wutNuLockRelease [lock_path: string] {
  rm --force \$lock_path
  # best-effort: only succeeds if now empty, so a concurrent process's own in-flight files are never touched
  try { rm (\$lock_path | path dirname) } catch { }
}

def wutNuInstall [wut_home: string, nu_bin: string, nu_vers: string, ext: string] {
  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    return
  }

  let triple = match \$"(\$env.SYS_OS_PLAT)_(\$env.SYS_CPU_ARCH)" {
    'darwin_aarch64' => 'aarch64-apple-darwin',
    'darwin_x86_64' => 'x86_64-apple-darwin',
    'linux_aarch64' => 'aarch64-unknown-linux-gnu',
    'linux_x86_64' => 'x86_64-unknown-linux-gnu',
    'winnt_aarch64' => 'aarch64-pc-windows-msvc',
    'winnt_x86_64' => 'x86_64-pc-windows-msvc',
    _ => '',
  }
  if \$triple == '' {
    opPrintErr \$"unsupported platform/arch for nu sync: (\$env.SYS_OS_PLAT)/(\$env.SYS_CPU_ARCH)"
    exit 1
  }

  # a hidden dir nested inside bin (not bin itself) so a fresh download can never collide with the pinned nu_bin path
  let work_dir = (\$wut_home | path join 'bin' '.nu')
  mkdir \$work_dir

  let lock_path = (\$work_dir | path join 'nu.lock')
  mut acquired = false
  mut waited = 0
  while \$waited < 240 {
    if (wutNuVersCurrent \$nu_bin \$nu_vers) {
      return
    }
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if \$locked {
      \$acquired = true
      break
    }
    sleep 500ms
    \$waited = \$waited + 1
  }
  if not \$acquired {
    opPrintWarn \$"reclaiming stale nu sync lock: (\$lock_path)"
    rm --force \$lock_path
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if not \$locked {
      opPrintErr \$"failed to acquire nu sync lock: (\$lock_path)"
      exit 1
    }
  }

  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    wutNuLockRelease \$lock_path
    return
  }

  let ext_archive = if \$env.SYS_OS_PLAT == 'winnt' { 'zip' } else { 'tar.gz' }
  let asset = \$"nu-(\$nu_vers)-(\$triple).(\$ext_archive)"
  let url = \$"https://github.com/nushell/nushell/releases/download/(\$nu_vers)/(\$asset)"
  let archive_path = (\$work_dir | path join \$asset)
  let extract_dir = (\$work_dir | path join \$"nu-(\$nu_vers)-(\$triple)")

  rm --force --recursive \$archive_path \$extract_dir

  if (do { ^curl --fail-with-body --location --no-progress-meter --output \$archive_path --url \$url } | complete).exit_code != 0 {
    opPrintErr \$"failed to download nu (\$nu_vers): (\$url)"
    rm --force \$archive_path
    wutNuLockRelease \$lock_path
    exit 1
  }

  # zip assets (winnt) have no wrapping folder, unlike tar.gz assets, so they must extract directly into
  # extract_dir; tar.gz assets already contain their own nu-(\$nu_vers)-(\$triple) folder, so they extract into work_dir
  let extract_target = if \$ext_archive == 'zip' {
    mkdir \$extract_dir
    \$extract_dir
  } else {
    \$work_dir
  }
  if (do { ^tar -xf \$archive_path -C \$extract_target } | complete).exit_code != 0 {
    opPrintErr \$"failed to extract nu (\$nu_vers)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  let extracted_bin = (\$extract_dir | path join \$"nu(\$ext)")
  if not (\$extracted_bin | path exists) {
    opPrintErr \$"nu binary not found in extracted archive: (\$extract_dir)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  if \$env.SYS_OS_PLAT != 'winnt' {
    ^chmod +x \$extracted_bin
  }
  mv --force \$extracted_bin \$nu_bin
  rm --force --recursive \$archive_path \$extract_dir

  wutNuLockRelease \$lock_path
}

def --env wutNuSync [] {
  if \$env.SYS_OS_PLAT not-in ['darwin' 'linux' 'winnt'] {
    opPrintWarn 'script is for darwin, linux, or winnt'
    return
  }

  \$env.WUT_HOME = (\$env.WUT_HOME? | default (\$env.HOME | path join '.wut'))
  let wut_home = \$env.WUT_HOME
  let ext = if \$env.SYS_OS_PLAT == 'winnt' { '.exe' } else { '' }
  let nu_bin = (\$wut_home | path join 'bin' \$"nu(\$ext)")
  let nu_vers = \$"(\$env.NU_VERS_MAJOR).(\$env.NU_VERS_MINOR).(\$env.NU_VERS_PATCH)"

  wutNuInstall \$wut_home \$nu_bin \$nu_vers \$ext
}

wutNuSync


opPrintInfo r#'id: wut virt rem | remove on local
aliases: 'r, rm, rem, remove, un, unin, uninstall'
arguments:
  - <parts> | path part(s) to match'#
\`
`;

snapshot[`nu / winnt / sync 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu.exe') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/sync?sysOsPlat=winnt&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / winnt / tidy 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu.exe') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/tidy?sysOsPlat=winnt&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / linux / add (host) 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/add?sysOsPlat=linux&sysHost=host'#

def opPrint --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  \$"(\$args | flatten | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print --stderr
    return
  }
  \$"(ansi red)(\$args | flatten | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi green)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi yellow)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi blue)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  let args = \$args | flatten
  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opMaybePrintCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opPrintCmd ...\$args
  }
}

def opRunCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ')"
}

def opRunSilentCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ') o+e> | silent"
}

def opMaybeRunCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunCmd ...\$args
  }
}

def opMaybeRunSilentCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunSilentCmd ...\$args
  }
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opMaybeRunCmd ...\$args
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 114

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.NU_VERS_MAJOR = 0

\$env.NU_VERS_MINOR = 114

\$env.NU_VERS_PATCH = 1

\$env.SYS_HOST = r#'host'#

\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/virt/add'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux&sysHost=host'#

def wutNuVersCurrent [nu_bin: string, nu_vers: string] {
  if not (\$nu_bin | path exists) {
    return false
  }
  let installed = (do { ^\$nu_bin --version } | complete)
  if \$installed.exit_code != 0 {
    return false
  }
  (\$installed.stdout | str trim) == \$nu_vers
}

def wutNuLockRelease [lock_path: string] {
  rm --force \$lock_path
  # best-effort: only succeeds if now empty, so a concurrent process's own in-flight files are never touched
  try { rm (\$lock_path | path dirname) } catch { }
}

def wutNuInstall [wut_home: string, nu_bin: string, nu_vers: string, ext: string] {
  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    return
  }

  let triple = match \$"(\$env.SYS_OS_PLAT)_(\$env.SYS_CPU_ARCH)" {
    'darwin_aarch64' => 'aarch64-apple-darwin',
    'darwin_x86_64' => 'x86_64-apple-darwin',
    'linux_aarch64' => 'aarch64-unknown-linux-gnu',
    'linux_x86_64' => 'x86_64-unknown-linux-gnu',
    'winnt_aarch64' => 'aarch64-pc-windows-msvc',
    'winnt_x86_64' => 'x86_64-pc-windows-msvc',
    _ => '',
  }
  if \$triple == '' {
    opPrintErr \$"unsupported platform/arch for nu sync: (\$env.SYS_OS_PLAT)/(\$env.SYS_CPU_ARCH)"
    exit 1
  }

  # a hidden dir nested inside bin (not bin itself) so a fresh download can never collide with the pinned nu_bin path
  let work_dir = (\$wut_home | path join 'bin' '.nu')
  mkdir \$work_dir

  let lock_path = (\$work_dir | path join 'nu.lock')
  mut acquired = false
  mut waited = 0
  while \$waited < 240 {
    if (wutNuVersCurrent \$nu_bin \$nu_vers) {
      return
    }
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if \$locked {
      \$acquired = true
      break
    }
    sleep 500ms
    \$waited = \$waited + 1
  }
  if not \$acquired {
    opPrintWarn \$"reclaiming stale nu sync lock: (\$lock_path)"
    rm --force \$lock_path
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if not \$locked {
      opPrintErr \$"failed to acquire nu sync lock: (\$lock_path)"
      exit 1
    }
  }

  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    wutNuLockRelease \$lock_path
    return
  }

  let ext_archive = if \$env.SYS_OS_PLAT == 'winnt' { 'zip' } else { 'tar.gz' }
  let asset = \$"nu-(\$nu_vers)-(\$triple).(\$ext_archive)"
  let url = \$"https://github.com/nushell/nushell/releases/download/(\$nu_vers)/(\$asset)"
  let archive_path = (\$work_dir | path join \$asset)
  let extract_dir = (\$work_dir | path join \$"nu-(\$nu_vers)-(\$triple)")

  rm --force --recursive \$archive_path \$extract_dir

  if (do { ^curl --fail-with-body --location --no-progress-meter --output \$archive_path --url \$url } | complete).exit_code != 0 {
    opPrintErr \$"failed to download nu (\$nu_vers): (\$url)"
    rm --force \$archive_path
    wutNuLockRelease \$lock_path
    exit 1
  }

  # zip assets (winnt) have no wrapping folder, unlike tar.gz assets, so they must extract directly into
  # extract_dir; tar.gz assets already contain their own nu-(\$nu_vers)-(\$triple) folder, so they extract into work_dir
  let extract_target = if \$ext_archive == 'zip' {
    mkdir \$extract_dir
    \$extract_dir
  } else {
    \$work_dir
  }
  if (do { ^tar -xf \$archive_path -C \$extract_target } | complete).exit_code != 0 {
    opPrintErr \$"failed to extract nu (\$nu_vers)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  let extracted_bin = (\$extract_dir | path join \$"nu(\$ext)")
  if not (\$extracted_bin | path exists) {
    opPrintErr \$"nu binary not found in extracted archive: (\$extract_dir)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  if \$env.SYS_OS_PLAT != 'winnt' {
    ^chmod +x \$extracted_bin
  }
  mv --force \$extracted_bin \$nu_bin
  rm --force --recursive \$archive_path \$extract_dir

  wutNuLockRelease \$lock_path
}

def --env wutNuSync [] {
  if \$env.SYS_OS_PLAT not-in ['darwin' 'linux' 'winnt'] {
    opPrintWarn 'script is for darwin, linux, or winnt'
    return
  }

  \$env.WUT_HOME = (\$env.WUT_HOME? | default (\$env.HOME | path join '.wut'))
  let wut_home = \$env.WUT_HOME
  let ext = if \$env.SYS_OS_PLAT == 'winnt' { '.exe' } else { '' }
  let nu_bin = (\$wut_home | path join 'bin' \$"nu(\$ext)")
  let nu_vers = \$"(\$env.NU_VERS_MAJOR).(\$env.NU_VERS_MINOR).(\$env.NU_VERS_PATCH)"

  wutNuInstall \$wut_home \$nu_bin \$nu_vers \$ext
}

wutNuSync


opPrintInfo r#'id: wut virt add | add on local
aliases: 'a, ad, in, install'
arguments:
  - <parts> | path part(s) to match'#
\`
`;

snapshot[`nu / linux / find (host) 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/find?sysOsPlat=linux&sysHost=host&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / linux / list (host) 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/list?sysOsPlat=linux&sysHost=host&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / linux / list (host podman) 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/list/podman?sysOsPlat=linux&sysHost=host&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / linux / rem (host) 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/rem?sysOsPlat=linux&sysHost=host'#

def opPrint --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  \$"(\$args | flatten | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print --stderr
    return
  }
  \$"(ansi red)(\$args | flatten | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi green)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi yellow)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  \$"(ansi blue)(\$args | flatten | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if SUCCINCT in \$env {
    return
  }
  if GRAYSCALE in \$env {
    \$"(\$args | flatten | str join ' ')" | print
    return
  }
  let args = \$args | flatten
  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opMaybePrintCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opPrintCmd ...\$args
  }
}

def opRunCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ')"
}

def opRunSilentCmd --wrapped [...args] {
  ^(\$nu.current-exe) --no-config-file -c \$"(\$args | flatten | str join ' ') o+e> | silent"
}

def opMaybeRunCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunCmd ...\$args
  }
}

def opMaybeRunSilentCmd --wrapped [...args] {
  if NOOP not-in \$env {
    opRunSilentCmd ...\$args
  }
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opMaybeRunCmd ...\$args
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 114

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.NU_VERS_MAJOR = 0

\$env.NU_VERS_MINOR = 114

\$env.NU_VERS_PATCH = 1

\$env.SYS_HOST = r#'host'#

\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/virt/rem'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux&sysHost=host'#

def wutNuVersCurrent [nu_bin: string, nu_vers: string] {
  if not (\$nu_bin | path exists) {
    return false
  }
  let installed = (do { ^\$nu_bin --version } | complete)
  if \$installed.exit_code != 0 {
    return false
  }
  (\$installed.stdout | str trim) == \$nu_vers
}

def wutNuLockRelease [lock_path: string] {
  rm --force \$lock_path
  # best-effort: only succeeds if now empty, so a concurrent process's own in-flight files are never touched
  try { rm (\$lock_path | path dirname) } catch { }
}

def wutNuInstall [wut_home: string, nu_bin: string, nu_vers: string, ext: string] {
  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    return
  }

  let triple = match \$"(\$env.SYS_OS_PLAT)_(\$env.SYS_CPU_ARCH)" {
    'darwin_aarch64' => 'aarch64-apple-darwin',
    'darwin_x86_64' => 'x86_64-apple-darwin',
    'linux_aarch64' => 'aarch64-unknown-linux-gnu',
    'linux_x86_64' => 'x86_64-unknown-linux-gnu',
    'winnt_aarch64' => 'aarch64-pc-windows-msvc',
    'winnt_x86_64' => 'x86_64-pc-windows-msvc',
    _ => '',
  }
  if \$triple == '' {
    opPrintErr \$"unsupported platform/arch for nu sync: (\$env.SYS_OS_PLAT)/(\$env.SYS_CPU_ARCH)"
    exit 1
  }

  # a hidden dir nested inside bin (not bin itself) so a fresh download can never collide with the pinned nu_bin path
  let work_dir = (\$wut_home | path join 'bin' '.nu')
  mkdir \$work_dir

  let lock_path = (\$work_dir | path join 'nu.lock')
  mut acquired = false
  mut waited = 0
  while \$waited < 240 {
    if (wutNuVersCurrent \$nu_bin \$nu_vers) {
      return
    }
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if \$locked {
      \$acquired = true
      break
    }
    sleep 500ms
    \$waited = \$waited + 1
  }
  if not \$acquired {
    opPrintWarn \$"reclaiming stale nu sync lock: (\$lock_path)"
    rm --force \$lock_path
    let locked = (try { "" | save \$lock_path; true } catch { false })
    if not \$locked {
      opPrintErr \$"failed to acquire nu sync lock: (\$lock_path)"
      exit 1
    }
  }

  if (wutNuVersCurrent \$nu_bin \$nu_vers) {
    wutNuLockRelease \$lock_path
    return
  }

  let ext_archive = if \$env.SYS_OS_PLAT == 'winnt' { 'zip' } else { 'tar.gz' }
  let asset = \$"nu-(\$nu_vers)-(\$triple).(\$ext_archive)"
  let url = \$"https://github.com/nushell/nushell/releases/download/(\$nu_vers)/(\$asset)"
  let archive_path = (\$work_dir | path join \$asset)
  let extract_dir = (\$work_dir | path join \$"nu-(\$nu_vers)-(\$triple)")

  rm --force --recursive \$archive_path \$extract_dir

  if (do { ^curl --fail-with-body --location --no-progress-meter --output \$archive_path --url \$url } | complete).exit_code != 0 {
    opPrintErr \$"failed to download nu (\$nu_vers): (\$url)"
    rm --force \$archive_path
    wutNuLockRelease \$lock_path
    exit 1
  }

  # zip assets (winnt) have no wrapping folder, unlike tar.gz assets, so they must extract directly into
  # extract_dir; tar.gz assets already contain their own nu-(\$nu_vers)-(\$triple) folder, so they extract into work_dir
  let extract_target = if \$ext_archive == 'zip' {
    mkdir \$extract_dir
    \$extract_dir
  } else {
    \$work_dir
  }
  if (do { ^tar -xf \$archive_path -C \$extract_target } | complete).exit_code != 0 {
    opPrintErr \$"failed to extract nu (\$nu_vers)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  let extracted_bin = (\$extract_dir | path join \$"nu(\$ext)")
  if not (\$extracted_bin | path exists) {
    opPrintErr \$"nu binary not found in extracted archive: (\$extract_dir)"
    rm --force --recursive \$archive_path \$extract_dir
    wutNuLockRelease \$lock_path
    exit 1
  }

  if \$env.SYS_OS_PLAT != 'winnt' {
    ^chmod +x \$extracted_bin
  }
  mv --force \$extracted_bin \$nu_bin
  rm --force --recursive \$archive_path \$extract_dir

  wutNuLockRelease \$lock_path
}

def --env wutNuSync [] {
  if \$env.SYS_OS_PLAT not-in ['darwin' 'linux' 'winnt'] {
    opPrintWarn 'script is for darwin, linux, or winnt'
    return
  }

  \$env.WUT_HOME = (\$env.WUT_HOME? | default (\$env.HOME | path join '.wut'))
  let wut_home = \$env.WUT_HOME
  let ext = if \$env.SYS_OS_PLAT == 'winnt' { '.exe' } else { '' }
  let nu_bin = (\$wut_home | path join 'bin' \$"nu(\$ext)")
  let nu_vers = \$"(\$env.NU_VERS_MAJOR).(\$env.NU_VERS_MINOR).(\$env.NU_VERS_PATCH)"

  wutNuInstall \$wut_home \$nu_bin \$nu_vers \$ext
}

wutNuSync


opPrintInfo r#'id: wut virt rem | remove on local
aliases: 'r, rm, rem, remove, un, unin, uninstall'
arguments:
  - <parts> | path part(s) to match'#
\`
`;

snapshot[`nu / linux / rem (host podman) — pinpoint 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/rem/podman?sysOsPlat=linux&sysHost=host&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / linux / add (host qemu) — wide 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/add/qemu?sysOsPlat=linux&sysHost=host&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / linux / rem (host qemu) — pinpoint 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/rem/qemu?sysOsPlat=linux&sysHost=host&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / linux / sync (host) 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/sync?sysOsPlat=linux&sysHost=host&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / linux / find (host test) 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/find/test?sysOsPlat=linux&sysHost=host&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;

snapshot[`nu / linux / find (host test2) 1`] = `
\`^(\$env.WUT_HOME | path join 'bin' 'nu') --no-config-file -c r##'\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/find/test2?sysOsPlat=linux&sysHost=host&wutNuPinned=1'#

^(\$nu.current-exe) --no-config-file -c \$"( http get --raw --redirect-mode follow \$env.REQ_URL_SH )"

'##\`
`;
